---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "\n    % Numerics\n    var r : real\n    var i : int\n    var n : nat\n\n    % should all produce booleans\n    var _v_res : boolean\n\n    _v_res := 1 not= 1\n    _v_res := 1 not= 1.0\n    _v_res := 1 not= r\n    _v_res := 1 not= i\n    _v_res := 1 not= n\n\n    _v_res := 1.0 not= 1\n    _v_res := 1.0 not= 1.0\n    _v_res := 1.0 not= r\n    _v_res := 1.0 not= i\n    _v_res := 1.0 not= n\n\n    _v_res := r not= 1\n    _v_res := r not= 1.0\n    _v_res := r not= r\n    _v_res := r not= i\n    _v_res := r not= n\n\n    _v_res := i not= 1\n    _v_res := i not= 1.0\n    _v_res := i not= r\n    _v_res := i not= i\n    _v_res := i not= n\n\n    _v_res := n not= 1\n    _v_res := n not= 1.0\n    _v_res := n not= r\n    _v_res := n not= i\n    _v_res := n not= n\n    "
---
"r"@(FileId(1), 24..25) [ConstVar(Var, No)]: real
"i"@(FileId(1), 41..42) [ConstVar(Var, No)]: int
"n"@(FileId(1), 57..58) [ConstVar(Var, No)]: nat
"_v_res"@(FileId(1), 108..114) [ConstVar(Var, No)]: boolean
"<root>"@(dummy) [Module(No)]: <error>

